package cn.teachcourse.strategy;

import android.graphics.Canvas;
import android.graphics.Paint;

/**
 * Created by http://teachcourse.cn on 2017/7/5.
 */

public interface IClock {
    void paint(Canvas canvas);
}
